--- a/.github/workflows/avh_integration_tests.yml
+++ b/.github/workflows/avh_integration_tests.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Build demo using CMSIS toolbox
         working-directory: ./demo
         run: |
+          ./tool-inventory.sh
           . <(curl https://aka.ms/vcpkg-init.sh -L)
           vcpkg activate
           cbuild Demo.csolution.yml --packs --update-rte --configuration .debug+AVH
